# youtube_elt

./: .gitignore  docker-compose.yaml  import_video_stats.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd_yt.yaml
dags/: main.py
dags/api/: video_stats.py
dags/dataquality/: soda.py
dags/datawarehouse/: data_loading.py  data_modification.py  data_transformation.py  data_utils.py  dwh.py
data/: YT_data_2026-05-05.json  YT_data_2026-05-06.json  YT_data_2026-05-07.json  YT_data_2026-05-13.json  YT_data_2026-05-18.json  YT_data_2026-05-22.json
docker/postgres/: init-multiple-databases.sh
include/soda/: checks.yml
src/: video_stats.py
tests/: conftest.py  integration_test.py  unit_test.py
