[project]
name = "youtube-elt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-postgres>=6.6.3",
    "cryptography>=48.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
